fixed scroll title and started working on text overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,20 +71,25 @@ html {
 /**/
 /*////STORY INDEX PAGE (/my-stories)////*/
 /**/
+.storyIndexHeader {
+  text-align: center;
+  max-width: 62%;
+
+}
+
 #storyList {
   float: left;
   border: 1px solid lightgray;
   border-radius: 8px;
   width: 62%;
-  overflow: hidden;
+  /*overflow: hidden;*/
   text-overflow: ellipsis;
   max-width: 62%;
   margin: auto;
   overflow-y: auto;
   overflow-x: hidden;
   font-size: 0;
-  width: 94%;
-  height: 410px;
+  height: 54%;
   scroll-snap-type: mandatory;
   scroll-snap-points-y: repeat(100%);
   scroll-snap-destination: 50% 50%;
@@ -99,6 +104,7 @@ html {
   font-size: x-large;
   cursor: pointer;
   scroll-snap-coordinate: 50% 50%;
+  text-overflow: ellipsis;
 }
 
 #addStory {
@@ -227,6 +233,18 @@ html {
   margin-top: 40px;
 }
 
+#titleText {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#nameText {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #statusBar {
   float: left;
   width: 25%;
@@ -271,6 +289,7 @@ html {
 /*Progress Bar Classes*/
 /*These need to be adjusted based on how many form inputs there are in New Story*/
 /*Currently there are 4*/
+
 .noProgress{
   width: 0%;
 }
